--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
         .container {
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
             align-items: center;
-            padding: 10px 200px;
+            margin-bottom: 20px;
         }
 
         .summary {
