--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meal Tracker System</title>
-    <link rel="icon" href="Images/logo.png">
+    <link rel="icon" href="logo.png">
     <style>
         body {
             font-family: Arial, sans-serif;
