--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            margin-bottom: 20px;
         }
 
         .container {
